--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+lib_deps = 
+	gyverlibs/EncButton@^3.5.10
+	gyverlibs/TimerMs@^1.2
+	gyverlibs/GyverIO@^1.3.4
+	mike-matera/ArduinoSTL@^1.3.3
