--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,13 @@ lib_deps =
 	gyverlibs/TimerMs@^1.2
 	gyverlibs/GyverIO@^1.3.4
 	mike-matera/ArduinoSTL@^1.3.3
+
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
+lib_deps = 
+	gyverlibs/EncButton@^3.5.10
+	gyverlibs/TimerMs@^1.2
+	gyverlibs/GyverIO@^1.3.4
+	mike-matera/ArduinoSTL@^1.3.3
