--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,8 @@ lib_deps =
 	gyverlibs/TimerMs@^1.2
 	gyverlibs/GyverIO@^1.3.4
 	mike-matera/ArduinoSTL@^1.3.3
+	gyverlibs/microLED@^3.6
+	fastled/FastLED@^3.9.13
 
 [env:uno]
 platform = atmelavr
@@ -27,3 +29,5 @@ lib_deps =
 	gyverlibs/TimerMs@^1.2
 	gyverlibs/GyverIO@^1.3.4
 	mike-matera/ArduinoSTL@^1.3.3
+	gyverlibs/microLED@^3.6
+	fastled/FastLED@^3.9.13
