--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+lib_extra_dirs = lib
+lib_ldf_mode = deep+
 lib_deps = 
 	gyverlibs/EncButton@^3.5.10
 	gyverlibs/TimerMs@^1.2
@@ -24,6 +26,8 @@ lib_deps =
 platform = atmelavr
 board = uno
 framework = arduino
+lib_extra_dirs = lib
+lib_ldf_mode = deep+
 lib_deps = 
 	gyverlibs/EncButton@^3.5.10
 	gyverlibs/TimerMs@^1.2
