--- a/platformio.ini
+++ b/platformio.ini
@@ -1,12 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
 
 [env:nanoatmega328]
 platform = atmelavr
@@ -22,16 +13,8 @@ lib_deps =
 	gyverlibs/microLED@^3.6
 	fastled/FastLED@^3.9.13
 
-[env:uno]
-platform = atmelavr
-board = uno
-framework = arduino
-lib_extra_dirs = lib
-lib_ldf_mode = deep+
-lib_deps = 
-	gyverlibs/EncButton@^3.5.10
-	gyverlibs/TimerMs@^1.2
-	gyverlibs/GyverIO@^1.3.4
-	mike-matera/ArduinoSTL@^1.3.3
-	gyverlibs/microLED@^3.6
-	fastled/FastLED@^3.9.13
+
+[env:stm32f103c8]
+platform = ststm32
+board = genericSTM32F103C8
+; framework = arduino
